fixed issue with dropdown being below codemirror scrollbar due to z-index

--- a/src/stylesheets/general/modals.scss
+++ b/src/stylesheets/general/modals.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: calc(100% - 42px);
   overflow-y: auto;
-  z-index: 10;
+  z-index: 15;
   background-color: rgba($modal_shadow, 0.4);
 
   .modal {
